force-app/main/default/objects/Jbilling_Merchant_Info__mdt/Jbilling_Merchant_Info__mdt.object-meta.xml
<CustomObject>
    <label>Jbilling Merchant Info</label>
    <pluralLabel>Jbilling Merchant Infos</pluralLabel>
</CustomObject>