force-app/main/default/objects/Jbilling_Merchant_Info__mdt/fields/ADO_End_Point__c.field-meta.xml
<CustomField>
    <fullName>ADO_End_Point__c</fullName>
    <label>ADO End Point</label>
    <length>255</length>
    <type>Text</type>
</CustomField>