force-app/main/default/objects/Jbilling_Merchant_Info__mdt/fields/ADO_Return_Url__c.field-meta.xml
<CustomField>
    <fullName>ADO_Return_Url__c</fullName>
    <label>ADO Return Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>