force-app/main/default/objects/Jbilling_Merchant_Info__mdt/fields/ADO_Test_Endpoint_URL__c.field-meta.xml
<CustomField>
    <fullName>ADO_Test_Endpoint_URL__c</fullName>
    <label>ADO Test Endpoint URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>