force-app/main/default/objects/Jbilling_Merchant_Info__mdt/fields/Batch_Agency__c.field-meta.xml
<CustomField>
    <fullName>Batch_Agency__c</fullName>
    <label>Batch Agency</label>
    <length>20</length>
    <type>Text</type>
</CustomField>