force-app/main/default/objects/Jbilling_Merchant_Info__mdt/fields/Board__c.field-meta.xml
<CustomField>
    <fullName>Board__c</fullName>
    <label>Board</label>
    <length>200</length>
    <type>Text</type>
</CustomField>