force-app/main/default/objects/Jbilling_Merchant_Info__mdt/fields/DOC_agency__c.field-meta.xml
<CustomField>
    <fullName>DOC_agency__c</fullName>
    <label>DOC agency</label>
    <length>20</length>
    <type>Text</type>
</CustomField>