force-app/main/default/objects/Jbilling_Merchant_Info__mdt/fields/GAO_Agency__c.field-meta.xml
<CustomField>
    <fullName>GAO_Agency__c</fullName>
    <label>GAO Agency</label>
    <length>20</length>
    <type>Text</type>
</CustomField>