force-app/main/default/objects/Jbilling_Merchant_Info__mdt/fields/GaoTransactionInstantce__c.field-meta.xml
<CustomField>
    <fullName>GaoTransactionInstantce__c</fullName>
    <label>GaoTransactionInstantce</label>
    <length>255</length>
    <type>Text</type>
</CustomField>