force-app/main/default/objects/Jbilling_Merchant_Info__mdt/fields/GaoTransactionType__c.field-meta.xml
<CustomField>
    <fullName>GaoTransactionType__c</fullName>
    <label>GaoTransactionType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>