force-app/main/default/objects/Jbilling_Merchant_Info__mdt/fields/Merchant_ID_Prod__c.field-meta.xml
<CustomField>
    <fullName>Merchant_ID_Prod__c</fullName>
    <label>Merchant ID Prod</label>
    <length>20</length>
    <type>Text</type>
</CustomField>