force-app/main/default/objects/Jbilling_Merchant_Info__mdt/fields/Merchant_ID_staging__c.field-meta.xml
<CustomField>
    <fullName>Merchant_ID_staging__c</fullName>
    <label>Merchant ID staging</label>
    <length>20</length>
    <type>Text</type>
</CustomField>