force-app/main/default/objects/Jbilling_Merchant_Info__mdt/fields/Merchant_Name__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Name__c</fullName>
    <label>Merchant Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>