force-app/main/default/objects/Jbilling_Merchant_Info__mdt/fields/Service_Prod__c.field-meta.xml
<CustomField>
    <fullName>Service_Prod__c</fullName>
    <label>Service Prod</label>
    <length>20</length>
    <type>Text</type>
</CustomField>