force-app/main/default/objects/Jbilling_Merchant_Info__mdt/fields/Service_staging__c.field-meta.xml
<CustomField>
    <fullName>Service_staging__c</fullName>
    <label>Service staging</label>
    <length>20</length>
    <type>Text</type>
</CustomField>