force-app/main/default/objects/Jbilling_Merchant_Info__mdt/fields/Summary_Description__c.field-meta.xml
<CustomField>
    <fullName>Summary_Description__c</fullName>
    <label>Summary Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>